# ai-cv-builder

./: .env.example  .gitignore  docker-compose.yml  myidea.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: config.py  database.py  dependencies.py  main.py
backend/models/: edit_log.py  jd_session.py  resume.py
backend/prompts/: __init__.py  cover_letter.txt  interview_questions.txt  match_scoring.txt  tailor_cv.txt
backend/routes/: edit_log.py  export.py  jd.py  resume.py
backend/services/: diff_service.py  llm_service.py  pdf_service.py
backend/templates/: cv_ats.html
backend/utils/: json_diff.py
docs/superpowers/plans/: 2026-05-29-cv-builder-mvp.md
docs/superpowers/specs/: 2026-05-29-cv-builder-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthGuard.tsx  CVPreview.tsx  ChangeSidebar.tsx  LoadingSpinner.tsx  MemoryHint.tsx  SectionForm.tsx
frontend/src/pages/: JDSession.tsx  ProfileBuilder.tsx  ReviewPreview.tsx
frontend/src/styles/: theme.css
supabase/migrations/: 001_initial_schema.sql  001_local.sql
