[project]
name = "cv-builder"
version = "0.1.0"
description = "AI-powered resume builder MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    "asyncpg>=0.30.0",
    "databases[postgresql]>=0.9.0",
    "python-jose[cryptography]>=3.3.0",
    "jsondiff>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
